# DiffyCult

./: Cargo.toml  Gen Template.md  README.md  TS4 - Diffy Cult Legacy.docx  TS4 – Diffy Cult Legacy Challenge.pptx  app.js  config.json  gen1.md  index.html  shadowpoint_legacy_gen_1_3.md  shadowpoint_legacy_gen_4_10.md  shadowpoint_legacy_v_1_0.md  styles v1.2.1.txt  styles.css  tauri.conf.json
DCLC v1.4.1/: License.txt  README.md  gitignore.txt
DCLC v1.4.1/app/: index.html
Generations/: Gen 10 28deed3eb8318060aad7d73a8af319d4.md  Gen 7 — The Outcast 28deed3eb831807b885ed6767426dc99.md  Gen 8 28deed3eb83180b9a2fde73e20aa2b3d.md  Gen 9 28deed3eb83180558869ef56cc8c7f6a.md  Generations 28deed3eb8318072b52ecab4abfdfe75.md  💪 Gen 6 — The Exhibitors 28deed3eb831805d848aece43d88f501.md
diffy dash v0.1.2/: README.md  app.js  index.html  styles.css  sw.js
diffy dash v0.1.2/data/: config.json
diffy dash v0.1.3/: README.md  app.js  index.html  styles.css
diffy dash v0.1.3/data/: config.json
diffy dash v0.1.4/: README.md  app.js  index.html  styles.css
diffy dash v0.1.4/data/: config.json
src/: main.rs
