[package]
name = "diffy-cult-tauri"
version = "0.0.4"
edition = "2021"
description = "Diffy Cult Dashboard — Tauri app"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
